fixing the z-index of confirm dialog box

--- a/src/App.css
+++ b/src/App.css
@@ -593,7 +593,7 @@ padding: 10px 10px;
   right: 0;
   bottom: 0;
   height: 100vh;
-  z-index: 999999999999999999999999999999999999999;
+  z-index: 9999;
   display: flex !important;
   /* display: none; */
   transform: translate(0%, -120%);
